<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="search_item">search item</string>
    <string name="add_item">add item</string>
    <string name="edit_item">edit item</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="fragment_detail_tv_description_text_dummy">Stunning Panoramic Penthouse.\n\nBreathtaking helicopter views of the Manhattan skyline, Central Park, and beyond define this sky-high, 9,000-square-foot penthouse duplex towering over the city.\n\nRedesigned with five bedrooms and six-and-a-half bathrooms by architectural legend Charles Gwathmey, this palatial home features awe-inspiring, 24-foot double-height ceilings in the living room, a chef’s eat-in-kitchen with state-of-the-art stainless steel appliances, separate floors for entertaining and living, a nearly 2,000-square-foot master suite with dual closets and separate bathrooms, dual home offices, as well as media and family rooms, and separate staff quarters.</string>
    <string name="check_item">validate property item</string>

    <string name="no_real_estate">No real estate</string>
    <string name="title_activity_maps">Map</string>
    <string name="dummy_agent_item_name">Real estate Manager</string>
    <string name="dummy_agent_item_mail">agent@email.com</string>
    <string name="dummy_agent_item_phone">07.88.66.99.44</string>
    <string name="activity_edit_tv_type">*Type of property :</string>
    <string name="activity_edit_til_price_hint">Price</string>
    <string name="activity_edit_til_price_helper">*Dollars</string>
    <string name="activity_edit_til_surface_hint">Surface</string>
    <string name="activity_edit_til_surface_helper">*Square meter</string>
    <string name="activity_edit_txt_number_rooms">Number of :</string>
    <string name="activity_edit_til_rooms_helper">*Rooms</string>
    <string name="activity_edit_til_bathroom_helper">Bathroom</string>
    <string name="activity_edit_til_bedroom_helper">Bedroom</string>
    <string name="activity_edit_til_description_hint">Description</string>
    <string name="activity_tv_photo">*Photo(s) :</string>
    <string name="activity_edit_ib_photo">gallery button</string>
    <string name="activity_edit_ib_camera">camera button</string>
    <string name="activity_edit_tv_address">*Address :</string>
    <string name="activity_edit_til_street_number_hint">Number</string>
    <string name="activity_edit_til_street_name_hint">Name</string>
    <string name="activity_edit_til_street_supplement_hint">Address supplement</string>
    <string name="activity_edit_til_city_hint">City</string>
    <string name="activity_edit_til_zip_hint">Zip code</string>
    <string name="activity_edit_til_country_hint">Country</string>
    <string name="activity_edit_tv_borough">*Borough :</string>
    <string name="activity_edit_tv_poi">Points of interests next the property :</string>
    <string name="activity_edit_til_date_hint">Entry date</string>
    <string name="activity_edit_til_date_helper">*month/day/years</string>
    <string name="activity_edit_id_calendar">calendar button</string>
    <string name="activity_edit_til_date_sell_hint">Sell date</string>
    <string name="activity_edit_til_date_sell_helper">*month/day/years</string>
    <string name="activity_edit_id_calendar_sell">calendar button</string>
    <string name="activity_edit_ib_agent">add agent button</string>
    <string name="activity_edit_tv_agent">Agent</string>
    <string name="activity_edit_dialog_til_title_hint">Title</string>
    <string name="activity_edit_dialog_preview">chosen photo</string>
    <string name="activity_edit_item_photo">chosen photo</string>
    <string name="activity_edit_item_delete">delete photo button</string>
    <string name="activity_edit_item_title">Facade</string>
    <string name="nav_header_img">background</string>
    <string name="nav_header_title">Real \nEstate \nManager</string>
    <string name="fragment_agent_dialog_tv_title">New agent</string>
    <string name="fragment_agent_dialog_til_first_name_hint">First name</string>
    <string name="fragment_agent_dialog_til_last_name_hint">Last name</string>
    <string name="fragment_agent_dialog_til_email_hint">email</string>
    <string name="fragment_agent_dialog_til_phone_hint">Tel</string>
    <string name="dummy_fragment_detail_tv_type">Penthouse</string>
    <string name="fragment_detail_tv_sold">Sold</string>
    <string name="fragment_detail_tv_description_title">Description</string>
    <string name="fragment_detail_tv_price_dummy">Price : 100 000 000 $</string>
    <string name="fragment_detail_tv_surface">Surface :</string>
    <string name="fragment_detail_tv_room">Number of rooms :</string>
    <string name="fragment_detail_tv_bedroom">Number of bedrooms :</string>
    <string name="fragment_detail_tv_bathroom">Number of bathroom :</string>
    <string name="fragment_detail_tv_location">Location :</string>
    <string name="fragment_detail_tv_address_dummy">740 Park Avenue \nApt 6/7A \nNew York \nNY 10021 \nUnited States</string>
    <string name="fragment_detail_tv_poi">Points of interests :</string>
    <string name="fragment_detail_tv_date_dummy">12/12/2012</string>
    <string name="fragment_detail_tv_empty">Select a property</string>
    <string name="fragment_detail_tv_type_dummy">Penthouse</string>
    <string name="fragment_detail_item_photo">photo</string>
    <string name="fragment_detail_item_title">Facade</string>
    <string name="fragment_filter_dialog_title">Filter</string>
    <string name="fragment_filter_dialog_cb_on_sale">On sale</string>
    <string name="fragment_filter_dialog_cb_sold">Sold</string>
    <string name="fragment_filter_dialog_tv_entry_date">Entry date</string>
    <string name="fragment_filter_dialog_til_entry_date_from_hint">From</string>
    <string name="fragment_filter_dialog_til_entry_date_from_helper">month/day/years</string>
    <string name="fragment_filter_dialog_ib_entry_date_from">calendar button</string>
    <string name="fragment_filter_dialog_til_entry_date_to_hint">To</string>
    <string name="fragment_filter_dialog_til_entry_date_to_helper">month/day/years</string>
    <string name="fragment_filter_dialog_ib_entry_date_to">calendar button</string>
    <string name="fragment_filter_dialog_tv_sale_date">Sale date</string>
    <string name="fragment_filter_dialog_til_sale_date_from_hint">From</string>
    <string name="fragment_filter_dialog_til_sale_date_from_helper">month/day/years</string>
    <string name="fragment_filter_dialog_ib_sale_date_from">calendar button</string>
    <string name="fragment_filter_dialog_til_sale_date_to_hint">To</string>
    <string name="fragment_filter_dialog_til_sale_date_to_helper">month/day/years</string>
    <string name="fragment_filter_dialog_ib_sale_date_to">calendar button</string>
    <string name="fragment_filter_dialog_tv_type">Type of property</string>
    <string name="fragment_filter_dialog_til_price_min">Min price</string>
    <string name="fragment_filter_dialog_til_price_max">Max price</string>
    <string name="fragment_filter_dialog_til_surface_min">Min surface</string>
    <string name="fragment_filter_dialog_til_surface_max">Max surface</string>
    <string name="fragment_filter_dialog_tv_photos">Photos :</string>
    <string name="fragment_filter_dialog_tv_photos_nbr">1</string>
    <string name="fragment_filter_dialog_tv_borough">Borough</string>
    <string name="fragment_filter_dialog_tv_poi">Points of interests next the property</string>
    <string name="fragment_list_item_photo">photo property</string>
    <string name="fragment_list_item_type">Penthouse</string>
    <string name="fragment_list_item_borough">Brooklyn</string>
    <string name="fragment_list_item_price">41,480,888,888,888</string>
    <string name="fragment_list_item_bathroom">2</string>
    <string name="fragment_list_item_bedroom">4</string>
    <string name="fragment_list_item_home">8</string>
    <string name="fragment_list_item_surface">750</string>
    <string name="activity_edit_authority_uri">com.openclassrooms.nycrealestatemanager.fileprovider</string>
    <string name="notification_service_new_agent_topic_name">newAgent</string>
    <string name="notification_service_new_agent_title">New agent</string>
    <string name="notification_service_new_agent_first_name_key">firstName</string>
    <string name="notification_service_new_agent_last_name_key">lastName</string>
    <string name="notification_service_new_property_topic_name">newProperty</string>
    <string name="notification_service_new_property_title">New property</string>
    <string name="notification_service_new_agent_price_key">price</string>
    <string name="notification_service_new_agent_type_key">type</string>
    <string name="notification_service_message_from_firebase">Message from Firebase</string>
    <string name="maps_fragment_centred">Centred</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="subscribe_new_agent">newAgent</string>
    <string name="subscribe_new_agent_fail">Fail to subscribe on new agents</string>
    <string name="subscribe_new_agent_success">Subscribe to new agents</string>
    <string name="subscribe_new_property">newProperty</string>
    <string name="subscribe_new_property_fail">Fail to subscribe on new properties</string>
    <string name="subscribe_new_property_success">Subscribe to new properties</string>
    <string name="unsubscribe_new_property_fail">Fail to Unsubscribe on new properties</string>
    <string name="unsubscribe_new_property">Unsubscribe to new properties</string>
    <string name="unsubscribe_new_agent_fail">Fail to Unsubscribe on new agents</string>
    <string name="unsubscribe_new_agent_success">Unsubscribe to new agents</string>
    <string name="automatic_sync_disabled">Automatic synchronization disabled!</string>
    <string name="automatic_sync_enabled">Automatic synchronization enabled!</string>
    <string name="key_subscribe_properties">subscribe_properties</string>
    <string name="key_subscribe_agents">subscribe_agents</string>
    <string name="key_auto_sync">auto_sync</string>
    <string name="activity_main_drawer_agent">Agents</string>
    <string name="activity_main_drawer_map">Map</string>
    <string name="activity_main_drawer_synchronize">Synchronize</string>
    <string name="activity_main_drawer_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="auto_sync_summary">Synchronize data between the remote database and the local database at application startup.</string>
    <string name="subscribe_agents_summary">Be notified when a new agent is added to the remote database.</string>
    <string name="subscribe_properties_summary">Be notified when a new property is added to the remote database.</string>
    <string name="preference_category_subscriptions">Subscriptions</string>
    <string name="preference_category_sync">Synchronization</string>
    <string name="subscribe_properties_title">Properties</string>
    <string name="subscribe_agents_title">Agents</string>
    <string name="auto_sync_title">Automatic synchronization</string>
    <string name="local_notification_channel_name">Notify property created</string>
    <string name="local_notification_channel_description">Notify when a property is added</string>
    <string name="local_notification_channel_id">Local notification</string>
    <string name="firebase_notification_channel_id">Firebase notification</string>
</resources>
