<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preference_category_subscriptions">

        <SwitchPreferenceCompat
            app:key="@string/key_subscribe_properties"
            app:title="@string/subscribe_properties_title"
            app:defaultValue="true"
            app:summary="@string/subscribe_properties_summary"
            app:icon="@drawable/ic_notifications_active_24"/>

        <SwitchPreferenceCompat
            app:key="@string/key_subscribe_agents"
            app:title="@string/subscribe_agents_title"
            app:defaultValue="true"
            app:summary="@string/subscribe_agents_summary"
            app:icon="@drawable/ic_notifications_active_24"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference_category_sync">

        <SwitchPreferenceCompat
            app:key="@string/key_auto_sync"
            app:title="@string/auto_sync_title"
            app:defaultValue="true"
            app:summary="@string/auto_sync_summary"
            app:icon="@drawable/ic_sync_24"/>

    </PreferenceCategory>
</PreferenceScreen>